--- a/src/views/notas/all-notes.hbs
+++ b/src/views/notas/all-notes.hbs
@@ -25,6 +25,7 @@
 
             <div class="card mx-auto">
                 <div class="card-body">
+                    <h1>Bienvenido, {{user.name}}</h1>
                     <p class="lead"> No hay notas aún.</p>
                     <a href="/notas/add" class="btn btn-success btn-block">Crear una nota</a>
                 </div>
