--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -1,2 +1,26 @@
-
-<h1>INGRESAR</h1>
+<div class="row">
+    <div class="col-md-6 mx-auto">
+        <div class="card mt-4 text-center">
+            <div class="card-header">
+                <h1>Registro</h1>
+            </div>
+            <div class="imgBox">
+                <img src="/img/logo-register.png" class="logo" alt="">
+            </div>
+            <div class="card-body">
+                <form action="/users/signin" method="POST">
+                    <div class="form-group">
+                        <input type="email" class="form-control" name="email" placeholder="Email" autofocus>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="form-control" name="password" placeholder="contraseña">
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-success btn-block">Entrar</button>
+                        
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
